--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -6,6 +6,6 @@
   </div>
 
   <div class="buttons">
-    <%= f.submit %>
-  <div>
+    <%= f.submit class: 'ui primary button' %>
+  </div>
 <% end %>
