--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,8 +1,10 @@
 <%= form_for(recipe, html: { class: 'ui form' }, multipart: true ) do |f| %>
+  <% recipe_presenter = present(recipe) %>
+  <% recipe_presenter.validation_errors %>
+
   <% if recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
-
       <ul>
       <% recipe.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -32,7 +34,7 @@
     </div>
     <div class="four wide field">
       <%= f.label :difficulty %>
-      <%= f.number_field :difficulty %>
+      <%= recipe_presenter.difficulty_dropdown(f) %>
     </div>
     <div class="four wide field">
       <%= f.label :portions %>
@@ -69,5 +71,6 @@
 
   <div class="actions">
     <%= f.submit class: 'ui primary button' %>
+    <%= link_to t(:cancel, scope: :application), recipe, class: 'ui secondary button' %>
   </div>
 <% end %>
