* Fix Crash on user update * Added Users to Contextmenu

--- a/app/views/application/_more_menu.html.erb
+++ b/app/views/application/_more_menu.html.erb
@@ -1,4 +1,5 @@
       <div class="menu">
         <%= context_menu 'Units', units_path, 'calculator' %>
+        <%= context_menu 'Users', users_path, 'users' %>
         <%= context_menu 'Activities', activities_path, 'list' %>
       </div>
