Added Tagging (act_as_taggable_on) Improved Recipe view Updated gems

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,3 +1,6 @@
 <div class="ui piled segment">
+  <%= render 'tag_cloud' %>
+</div>
+<div class="ui piled segment">
   <%= render 'activities/activities', activities: PublicActivity::Activity.order(created_at: :desc).first(5) %>
 </div>
