--- a/app/views/application/_tag_cloud.html.erb
+++ b/app/views/application/_tag_cloud.html.erb
@@ -1,3 +1,4 @@
+<h3><%= t '.popular_tags' %></h2>
 <div id="tag_cloud" class="ui tag labels">
   <% tag_cloud Recipe.tag_counts, %w{mini small large} do |tag, css_class| %>
     <%= link_to tag.name, tag_recipes_path(tag.name), class: "ui #{css_class} label" %>
