--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -32,7 +32,7 @@
         <i class="doctor icon"></i>
         <%= t('.calories') %>
         <div class="detail">
-          <%= @recipe.calories %><%= t('.calories_unit') %>
+          <%= format_calorific_value(@recipe.calorific_value) %>
         </div>
       </a>
     </div>
