--- a/app/views/recipes/show.pdf.erb
+++ b/app/views/recipes/show.pdf.erb
@@ -39,7 +39,7 @@
         <i class="doctor icon"></i>
         <%= t('.calories') %>
         <div class="detail">
-          <%= @recipe.calories %><%= t('.calories_unit') %>
+          <%= @recipe.calorific_value %>
         </div>
       </a>
     </div>
