--- a/app/assets/stylesheets/pdf.css
+++ b/app/assets/stylesheets/pdf.css
@@ -1,3 +1,12 @@
+/*
+ * This is a manifest file that'll be compiled into pdf.css
+ *
+ *= require semantic_ui/semantic_ui
+ *= redwine
+ *= require_tree .
+ *= require_self
+ */
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
