--- a/app/views/recipes/_hint.html.erb
+++ b/app/views/recipes/_hint.html.erb
@@ -1,13 +1,13 @@
 <div class="remove_fields_container ui basic segment">
   <div class="field">
-    <%= f.label t(:step, scope: :application) %>
+    <%= f.label :text %>
     <%= f.text_area :text %>
   </div>
 
   <div class="field">
     <%= f.hidden_field :_destroy %>
     <%= link_to '#', class: 'ui labeled icon red remove_fields button' do %>
-      <% icon('remove') + t('remove_preparation_step', scope: [:recipes]) %>
+      <% icon('remove') + t('remove_hint', scope: [:recipes]) %>
     <% end %>
   </div>
 </div>
