--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,5 +1,9 @@
+<h3 class="ui horizontal divider header">
+  <i class="comments icon"></i>
+  <%= t('.comments') %>
+</h3>
+
 <div class="ui comments" id="comments">
-  <h3 class="ui dividing header"><%= t '.comments' %></h3>
   <% commentable.comments.includes(:user).each do |comment| %>
       <%= present(comment).comment_view %>
   <% end %>
