--- a/app/views/public_activity/recipe/_create.html.erb
+++ b/app/views/public_activity/recipe/_create.html.erb
@@ -1,5 +1,8 @@
 <%= render_feed_event activity, 'food' do %>
-  <% r = link_to(activity.trackable.name, activity.trackable) %>
+  <% r = t '.which_was_deleted' %>
+  <% if activity.trackable %>
+    <% r = link_to(activity.trackable.name, activity.trackable) %>
+  <% end %>
   <% u = activity.owner ? link_to(activity.owner.name, activity.owner) : t(:guest, scope: :application) %>
   <%= t('.new_recipe', recipe: r, user: u).html_safe%>
 <% end %>
