--- a/app/views/public_activity/comment/_create.html.erb
+++ b/app/views/public_activity/comment/_create.html.erb
@@ -1,5 +1,8 @@
 <%= render_feed_event activity, 'comment' do %>
+  <% c = t '.which_was_deleted' %>
+  <% if activity.trackable and activity.trackable.commentable %>
   <% c = link_to(activity.trackable.commentable.name, activity.trackable.commentable) %>
+  <% end %>
   <% u = activity.owner ? link_to(activity.owner.name, activity.owner) : t(:guest, scope: :application) %>
   <%= t('.new_comment', commentable: c, user: u).html_safe %>
 <% end %>
