--- a/app/views/application/_context_menu.html.erb
+++ b/app/views/application/_context_menu.html.erb
@@ -18,6 +18,7 @@
         <div class="header"><%= t(:administration, scope: :application)%></div>
         <div class="menu">
           <%= context_menu 'Settings', settings_path, 'settings' %>
+          <%= context_menu 'Pages', pages_path, 'settings' %>
         </div>
       </div>
     <% end %>
