Added delete option to comments * Improved modal * Added UI * Captcha prepared * edit prepared

--- a/app/views/application/_delete_modal.html.erb
+++ b/app/views/application/_delete_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="ui small basic modal" id="delete_modal">
+<div class="ui small basic modal" id="<%= delete_modal_anchor(object, false) %>">
   <div class="ui icon header">
     <i class="sign out icon"></i>
     <%= t '.delete' %>
