--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -8,7 +8,7 @@
 
   <div class="right menu">
     <% if current_user %>
-      <%= link_to '#sign_out', class: 'ui sign_out item' do %>
+      <%= link_to '#sign_out', class: 'ui open_modal item' do %>
         <i class="sign out icon"></i>
       <% end %>
       <%= link_to current_user, class: 'item' do %>
