--- a/app/assets/stylesheets/metro.scss.erb
+++ b/app/assets/stylesheets/metro.scss.erb
@@ -160,7 +160,7 @@
 /* 2. PAGE ITEMS, WIDGETS */
 /*===================================================*/
 
-.content, .sidebar{padding: 50px 0;}
+/* .content, .sidebar{padding: 50px 0;} */
 #middle{position: relative; z-index: 0;}
 #middle.sidebar_left > .container > .row > .col-sm-8{float:right;}
 
