--- a/app/views/application/_sign_out_modal.html.erb
+++ b/app/views/application/_sign_out_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="ui small basic modal" id="sign_out_modal">
+<div class="ui small basic modal" id="sign_out">
   <div class="ui icon header">
     <i class="sign out icon"></i>
     <%= t '.sign_out' %>
