* Login Modal * Improved deleted Modal

--- a/app/views/application/_delete_modal.html.erb
+++ b/app/views/application/_delete_modal.html.erb
@@ -1,6 +1,6 @@
 <div class="ui small basic modal" id="<%= delete_modal_anchor(object, false) %>">
   <div class="ui icon header">
-    <i class="sign out icon"></i>
+    <i class="trash icon"></i>
     <%= t '.delete' %>
   </div>
   <div class="content">
