--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -3,27 +3,26 @@
   <%= active_menu_link blogs_path, t('.blog'), :newspaper %>
   <%= active_menu_link recipes_path, t('.recipes'), :food %>
   <%= active_menu_link ingredients_path, t('.ingredients'), :lab %>
-  <%#= active_menu_link images_path, t('.images'), :image %>
-
 
   <div class="right menu">
     <% if current_user %>
-      <%= link_to '#sign_out', class: 'ui open_modal item' do %>
+      <%= link_to '#sign_out', class: 'ui open_modal item', 'data-modal-id': '#sign_out' do %>
         <i class="sign out icon"></i>
+        <%= t '.sign_out' %>
       <% end %>
-      <%= link_to current_user, class: 'item' do %>
-        <i class="user icon"></i>
-      <% end %>
+      <%= render 'sign_out_modal' %>
+
       <a class="admin item">
         <i class="options icon"></i>
       </a>
     <% else %>
-      <%= link_to new_user_session_path, class: 'ui sign_in item' do %>
+      <%= link_to '#sign_in', class: 'ui open_modal item', 'data-modal-id': '#sign_in' do %>
         <i class="sign in icon"></i>
         <%= t '.sign_in' %>
       <% end %>
+      <%= render 'sign_in_modal' %>
     <% end %>
-    <%= render 'sign_out_modal' %>
+
     <div class="ui category search item">
       <%= form_tag(search_path, method: :get, class: 'ui form') do %>
         <div class="ui transparent icon input">
