Added TinyMCE as WYSIWYG Editor Activated for Blogposts

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label :text %>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, class: 'tinymce' %>
   </div>
 
   <div class="field">
@@ -45,3 +45,5 @@
     <%= f.submit class: 'ui primary button' %>
   </div>
 <% end %>
+
+<%= tinymce %>
