--- a/app/views/application/_sign_in_modal.html.erb
+++ b/app/views/application/_sign_in_modal.html.erb
@@ -9,12 +9,12 @@
 
   <%= form_for(:user_session, url: new_user_session_path, html: { class: 'ui form' }) do |f| %>
     <div class="field">
-      <%= f.label :email %><br />
+      <%= f.label :email %>
       <%= f.email_field :email, autofocus: true %>
     </div>
 
     <div class="field">
-      <%= f.label :password %><br />
+      <%= f.label :password %>
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
